--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -1243,6 +1243,7 @@
     "OptionNoThemeVideo": "No Theme Video",
     "LabelOneTimeDonationAmount": "Donation amount:",
     "ButtonDonate": "Donate",
+    "ButtonPurchase":  "Purchase",
     "OptionActor": "Actor",
     "OptionComposer": "Composer",
     "OptionDirector": "Director",
