--- a/MediaBrowser.Server.Implementations/Localization/Server/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/fr.json
@@ -1228,7 +1228,7 @@
     "OptionNoThemeVideo": "Pas de th\u00e8me vid\u00e9o",
     "LabelOneTimeDonationAmount": "Montant du don :",
     "ButtonDonate": "Faire un don",
-    "ButtonPurchase": "Purchase",
+    "ButtonPurchase": "Acheter",
     "OptionActor": "Acteur(trice)",
     "OptionComposer": "Compositeur:",
     "OptionDirector": "R\u00e9alisateur:",
