--- a/MediaBrowser.Server.Implementations/Localization/Server/kk.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/kk.json
@@ -1228,7 +1228,7 @@
     "OptionNoThemeVideo": "\u0422\u0430\u049b\u044b\u0440\u044b\u043f\u0442\u044b\u049b \u0431\u0435\u0439\u043d\u0435\u0441\u0456\u0437",
     "LabelOneTimeDonationAmount": "\u049a\u0430\u0439\u044b\u0440\u043c\u0430\u043b\u0434\u044b\u049b \u049b\u043e\u0440\u044b\u0442\u044b\u043d\u0434\u044b\u0441\u044b:",
     "ButtonDonate": "\u049a\u0430\u0439\u044b\u0440\u043c\u0430\u043b\u0430\u0443",
-    "ButtonPurchase": "Purchase",
+    "ButtonPurchase": "\u0421\u0430\u0442\u044b\u043f \u0430\u043b\u0443",
     "OptionActor": "\u0410\u043a\u0442\u0435\u0440",
     "OptionComposer": "\u041a\u043e\u043c\u043f\u043e\u0437\u0438\u0442\u043e\u0440",
     "OptionDirector": "\u0420\u0435\u0436\u0438\u0441\u0441\u0435\u0440",
