--- a/MediaBrowser.Server.Implementations/Localization/Server/pt-BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/pt-BR.json
@@ -1228,7 +1228,7 @@
     "OptionNoThemeVideo": "Nenhum V\u00eddeo-tema",
     "LabelOneTimeDonationAmount": "Valor da doa\u00e7\u00e3o:",
     "ButtonDonate": "Doar",
-    "ButtonPurchase": "Purchase",
+    "ButtonPurchase": "Comprar",
     "OptionActor": "Ator",
     "OptionComposer": "Compositor",
     "OptionDirector": "Diretor",
