--- a/MediaBrowser.Server.Implementations/Localization/Server/ru.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/ru.json
@@ -1228,7 +1228,7 @@
     "OptionNoThemeVideo": "\u0411\u0435\u0437 \u0442\u0435\u043c\u0430\u0442\u0438\u0447\u0435\u0441\u043a\u043e\u0433\u043e \u0432\u0438\u0434\u0435\u043e",
     "LabelOneTimeDonationAmount": "\u0421\u0443\u043c\u043c\u0430 \u043f\u043e\u0436\u0435\u0440\u0442\u0432\u043e\u0432\u0430\u043d\u0438\u044f:",
     "ButtonDonate": "\u041f\u043e\u0436\u0435\u0440\u0442\u0432\u043e\u0432\u0430\u0442\u044c",
-    "ButtonPurchase": "Purchase",
+    "ButtonPurchase": "\u041f\u0440\u0438\u043e\u0431\u0440\u0435\u0441\u0442\u0438",
     "OptionActor": "\u0410\u043a\u0442\u0451\u0440",
     "OptionComposer": "\u041a\u043e\u043c\u043f\u043e\u0437\u0438\u0442\u043e\u0440",
     "OptionDirector": "\u0420\u0435\u0436\u0438\u0441\u0441\u0451\u0440",
