--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/de.json
@@ -399,7 +399,7 @@
     "TabMetadata": "Metadata",
     "TabDLNA": "DLNA",
     "TabLiveTV": "Live-TV",
-    "TabAutoOrganize": "Automatische Organisation",
+    "TabAutoOrganize": "Autom.Organisation",
     "TabPlugins": "Plugins",
     "TabAdvanced": "Erweitert",
     "TabHelp": "Hilfe",
@@ -587,7 +587,7 @@
     "TooltipLike": "Like",
     "TooltipDislike": "Dislike",
     "TooltipPlayed": "Gespielt",
-    "ValueSeriesYearToPresent": "{0}-vorhanden",
+    "ValueSeriesYearToPresent": "{0}-heute",
     "ValueAwards": "Auszeichnungen: {0}",
     "ValueBudget": "Budget: {0}",
     "ValueRevenue": "Einnahmen: {0}",
@@ -689,7 +689,7 @@
     "DashboardTourHelp": "Die In-App-Hilfe Schaltfl\u00e4che bietet eine schnelle M\u00f6glichkeit um eine Wiki-Seite zum aktuellen Inhalt zu \u00f6ffnen.",
     "DashboardTourUsers": "Erstelle einfach Benutzeraccounts f\u00fcr Freunde und Familie. Jeder mit seinen individuellen Einstellungen bei Berechtigungen, Blibliothekenzugriff, Kindersicherung und mehr.",
     "DashboardTourCinemaMode": "Der Kino-Modus bringt das Kinoerlebnis direkt in dein Wohnzimmer, mit der F\u00e4higkeit Trailer und benutzerdefinierte Intros vor dem Hauptfilm zu spielen.",
-    "DashboardTourChapters": "Aktiviere die Bildgenerierung f\u00fcr die Kapitel deiner Videos f\u00fcr eine bessere Darstellung w\u00e4hrend des Ansehens.",
+    "DashboardTourChapters": "Aktiviere Kapitel-Bilder Generierung f\u00fcr Videos f\u00fcr eine bessere Darstellung.",
     "DashboardTourSubtitles": "Lade automatisch Untertitel f\u00fcr jede Sprache f\u00fcr deine Videos herunter.",
     "DashboardTourPlugins": "Installiere Plugins wie Internet Videoportale, Live-TV, Metadatenscanner und mehr.",
     "DashboardTourNotifications": "Sende automatisch Benachrichtigungen von Serverereignissen auf dein mobiles Endger\u00e4t, per E-Mail und mehr.",
