--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/nb.json
@@ -6,8 +6,8 @@
     "Administrator": "Administrator",
     "Password": "Passord",
     "DeleteImage": "Slett bilde",
-    "MessageThankYouForSupporting": "Thank you for supporting Emby.",
-    "MessagePleaseSupportProject": "Please support Emby.",
+    "MessageThankYouForSupporting": "Takk for at du st\u00f8tter Emby.",
+    "MessagePleaseSupportProject": "Vennligst st\u00f8tt Emby.",
     "DeleteImageConfirmation": "Er du sikker p\u00e5 at du vil slette bildet?",
     "FileReadCancelled": "Lesing av filen kansellert.",
     "FileNotFound": "Fil ikke funnet",
@@ -41,24 +41,24 @@
     "TitleSync": "Synk",
     "ButtonDonate": "Don\u00e9r",
     "LabelRecurringDonationCanBeCancelledHelp": "Gjentakende donasjoner kan avbrytes n\u00e5r som helst fra din PayPal-konto.",
-    "HeaderMyMedia": "My Media",
+    "HeaderMyMedia": "Mine media",
     "TitleNotifications": "Beskjeder",
     "ErrorLaunchingChromecast": "Det var en feil ved start av Chromecast. Vennligst forsikre deg om at enheten har korrekt forbindelse til ditt tr\u00e5dl\u00f8se nettverk.",
     "MessageErrorLoadingSupporterInfo": "There was an error loading supporter information. Please try again later.",
     "MessageLinkYourSupporterKey": "Link your supporter key with up to {0} Emby Connect members to enjoy free access to the following apps:",
-    "HeaderConfirmRemoveUser": "Remove User",
+    "HeaderConfirmRemoveUser": "Fjern bruker",
     "MessageSwipeDownOnRemoteControl": "Welcome to remote control. Select the device to control by clicking the cast icon in the upper right corner. Swipe down anywhere on this screen to go back to where you came from.",
     "MessageConfirmRemoveConnectSupporter": "Are you sure you wish to remove additional supporter benefits from this user?",
     "ValueTimeLimitSingleHour": "Time limit: 1 hour",
     "ValueTimeLimitMultiHour": "Time limit: {0} hours",
     "HeaderUsers": "Brukere",
-    "PluginCategoryGeneral": "General",
-    "PluginCategoryContentProvider": "Content Providers",
-    "PluginCategoryScreenSaver": "Screen Savers",
-    "PluginCategoryTheme": "Themes",
-    "PluginCategorySync": "Sync",
-    "PluginCategorySocialIntegration": "Social Networks",
-    "PluginCategoryNotifications": "Notifications",
+    "PluginCategoryGeneral": "Generelt",
+    "PluginCategoryContentProvider": "Innholdstilbydere",
+    "PluginCategoryScreenSaver": "Skjermspar",
+    "PluginCategoryTheme": "Temaer",
+    "PluginCategorySync": "Synk",
+    "PluginCategorySocialIntegration": "Sosiale nettverk",
+    "PluginCategoryNotifications": "Varslinger",
     "PluginCategoryMetadata": "Metadata",
     "PluginCategoryLiveTV": "Live TV",
     "PluginCategoryChannel": "Channels",
@@ -98,10 +98,10 @@
     "HeaderSupporterBenefit": "St\u00f8ttemedlemskap gir ytterligere fordeler som for eksempel tilgang til synkronisering, premium plugins, internett-kanaler og mer. {0}L\u00e6r mer{1}.",
     "LabelSyncNoTargetsHelp": "Det ser ikke ut til at du har noen applikasjoner som st\u00f8tter synkronisering.",
     "HeaderWelcomeToProjectServerDashboard": "Welcome to the Emby Server Dashboard",
-    "HeaderWelcomeToProjectWebClient": "Welcome to Emby",
+    "HeaderWelcomeToProjectWebClient": "Velkommen til Emby",
     "ButtonTakeTheTour": "Bli med p\u00e5 omvisning",
     "HeaderWelcomeBack": "Velkommen tilbake!",
-    "TitlePlugins": "Plugins",
+    "TitlePlugins": "Programtillegg",
     "ButtonTakeTheTourToSeeWhatsNew": "Ta en titt p\u00e5 hva som er nytt",
     "MessageNoSyncJobsFound": "Ingen synkroniseringsjobber funnet. Opprett en synkroniseringsjobb ved hjelp av Synkroniseringsknappene i biblioteket",
     "HeaderLibraryAccess": "Bibliotek tilgang",
@@ -181,8 +181,8 @@
     "OptionFriday": "Fredag",
     "OptionSaturday": "L\u00f8rdag",
     "OptionEveryday": "Hver dag",
-    "OptionWeekend": "Weekends",
-    "OptionWeekday": "Weekdays",
+    "OptionWeekend": "Helger",
+    "OptionWeekday": "Ukedager",
     "HeaderConfirmDeletion": "Bekreft Kansellering",
     "MessageConfirmPathSubstitutionDeletion": "Er du sikker p\u00e5 at du vil slette sti erstatter?",
     "LiveTvUpdateAvailable": "(Oppdatering tilgjengelig)",
@@ -252,8 +252,8 @@
     "OrganizePatternResult": "Resultat: {0}",
     "HeaderRestart": "Omstart",
     "HeaderShutdown": "Sl\u00e5 Av",
-    "MessageConfirmRestart": "Are you sure you wish to restart Emby Server?",
-    "MessageConfirmShutdown": "Are you sure you wish to shutdown Emby Server?",
+    "MessageConfirmRestart": "Er du sikker p\u00e5 at du vil starte Emby Server p\u00e5 ny?",
+    "MessageConfirmShutdown": "Er du sikker p\u00e5 at du vil avslutte Emby Server",
     "ButtonUpdateNow": "Oppdater N\u00e5",
     "ValueItemCount": "{0} element",
     "ValueItemCountPlural": "{0} elementer",
@@ -542,7 +542,7 @@
     "MessageYouHaveALifetimeMembership": "You have a lifetime supporter membership. You can provide additional donations on a one-time or recurring basis using the options below. Thank you for supporting Emby.",
     "MessageYouHaveAnActiveRecurringMembership": "Du har et aktivt {0} medlemskap. Du kan oppgradere din plan ved hjelp av alternativene nedenfor.",
     "ButtonDelete": "Slett",
-    "HeaderEmbyAccountAdded": "Emby Account Added",
+    "HeaderEmbyAccountAdded": "Emby konto lagt til",
     "MessageEmbyAccountAdded": "The Emby account has been added to this user.",
     "MessagePendingEmbyAccountAdded": "The Emby account has been added to this user. An email will be sent to the owner of the account. The invitation will need to be confirmed by clicking a link within the email.",
     "HeaderEmbyAccountRemoved": "Emby Account Removed",
@@ -727,7 +727,7 @@
     "MessageInvalidForgotPasswordPin": "Ugyldig eller utg\u00e5tt PIN kode angitt. Vennligst pr\u00f8v igjen.",
     "MessagePasswordResetForUsers": "Passordet er fjernet for f\u00f8lgende brukere:",
     "HeaderInviteGuest": "Inviter gjest",
-    "ButtonLinkMyEmbyAccount": "Link my account now",
+    "ButtonLinkMyEmbyAccount": "Link kontoen min n\u00e5",
     "MessageConnectAccountRequiredToInviteGuest": "In order to invite guests you need to first link your Emby account to this server.",
     "ButtonSync": "Synk",
     "SyncMedia": "Synkroniser media",
@@ -756,15 +756,15 @@
     "SyncJobItemStatusFailed": "Feilet",
     "SyncJobItemStatusRemovedFromDevice": "Fjernet fra enheten",
     "SyncJobItemStatusCancelled": "Kansellert",
-    "LabelProfile": "Profile:",
+    "LabelProfile": "Profil:",
     "LabelBitrateMbps": "Bitrate (Mbps):",
-    "EmbyIntroDownloadMessage": "To download and install Emby Server visit {0}.",
-    "ButtonNewServer": "New Server",
-    "ButtonSignInWithConnect": "Sign in with Emby Connect",
-    "HeaderNewServer": "New Server",
-    "MyDevice": "My Device",
-    "ButtonRemote": "Remote",
+    "EmbyIntroDownloadMessage": "For \u00e5 laste ned og installere Emby Server bes\u00f8k {0}.",
+    "ButtonNewServer": "Ny server",
+    "ButtonSignInWithConnect": "Logg inn med Emby Connect",
+    "HeaderNewServer": "Ny server",
+    "MyDevice": "Min(e) enhet(er)",
+    "ButtonRemote": "Fjernkont.",
     "TabInfo": "Info",
     "TabCast": "Cast",
-    "TabScenes": "Scenes"
+    "TabScenes": "Scener"
 }
