--- a/MediaBrowser.Server.Implementations/Localization/Server/es.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/es.json
@@ -368,7 +368,7 @@
     "LabelFanartApiKey": "Personal api key:",
     "LabelFanartApiKeyHelp": "Requests to fanart without a personal API key return results that were approved over 7 days ago. With a personal API key that drops to 48 hours and if you are also a fanart VIP member that will further drop to around 10 minutes.",
     "ExtractChapterImagesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs when videos are discovered, and also as a nightly scheduled task. The schedule is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
-    "LabelMetadataDownloadLanguage": "Preferred download language:",
+    "LabelMetadataDownloadLanguage": "Idioma preferido visualizado",
     "ButtonAutoScroll": "Auto-desplazamiento",
     "LabelImageSavingConvention": "Sistema de guardado de im\u00e1genes:",
     "LabelImageSavingConventionHelp": "Emby recognizes images from most major media applications. Choosing your downloading convention is useful if you also use other products.",
@@ -524,7 +524,7 @@
     "HeaderCustomDlnaProfiles": "Perfiles personalizados",
     "HeaderSystemDlnaProfiles": "Perfiles del sistema",
     "CustomDlnaProfilesHelp": "Crear un perfil personalizado para un nuevo dispositivo o reemplazar un perfil del sistema.",
-    "SystemDlnaProfilesHelp": "System profiles are read-only. Changes to a system profile will be saved to a new custom profile.",
+    "SystemDlnaProfilesHelp": "El perfil del Sistema es solo lectura. Cambios al perfil del sistema seran guardados en un perfil nuevo modificado.",
     "TitleDashboard": "Panel de control",
     "TabHome": "Inicio",
     "TabInfo": "Info",
@@ -551,12 +551,12 @@
     "LabelPublicHttpsPort": "N\u00famero de puerto p\u00fablico de https:",
     "LabelPublicHttpsPortHelp": "El n\u00famero de puerto p\u00fablico que debe ser enlazado al puerto local https:",
     "LabelEnableHttps": "Reportar el https como una direccion externa",
-    "LabelEnableHttpsHelp": "If enabled, the server will report an https url to clients as it's external address.",
+    "LabelEnableHttpsHelp": "Si es habilitado, el servidor reportara un enlaze https a los clientes como una direccion externa.",
     "LabelHttpsPort": "N\u00famero de puerto local de https:",
     "LabelHttpsPortHelp": "N\u00famero de puerto al que el servidor de tcp de Emby debe de ser enlazado.",
     "LabelWebSocketPortNumber": "N\u00famero de puerto WebSocket:",
     "LabelEnableAutomaticPortMap": "Habilitar asignaci\u00f3n de puertos autom\u00e1tico",
-    "LabelEnableAutomaticPortMapHelp": "Attempt to automatically map the public port to the local port via UPnP. This may not work with some router models.",
+    "LabelEnableAutomaticPortMapHelp": "UPnP permite la configuraci\u00f3n del router para acceso externo de forma f\u00e1cil y autom\u00e1tica. Esto puede no funcionar en algunos modelos de routers.",
     "LabelExternalDDNS": "Direccion externa del WAN:",
     "LabelExternalDDNSHelp": "Ponga aqui su DNS dinamico si tiene uno. las aplicaciones de Emby lo usar\u00e1n para conectarse remotamente. Deje en blanco para detecci\u00f3n autom\u00e1tica.",
     "TabResume": "Continuar",
@@ -634,11 +634,11 @@
     "MessagePleaseRestartServerToFinishUpdating": "Reinicie el servidor para acabar de aplicar las actualizaciones.",
     "LabelDownMixAudioScale": "Audio boost when downmixing:",
     "LabelDownMixAudioScaleHelp": "Potenciador de audio. Establecer a 1 para preservar el volumen original.",
-    "ButtonLinkKeys": "Transfer Key",
+    "ButtonLinkKeys": "Transferir Clave",
     "LabelOldSupporterKey": "Antigua clave de seguidor",
     "LabelNewSupporterKey": "Nueva clave de seguidor",
-    "HeaderMultipleKeyLinking": "Transfer to New Key",
-    "MultipleKeyLinkingHelp": "If you received a new supporter key, use this form to transfer the old key's registrations to your new one.",
+    "HeaderMultipleKeyLinking": "Trasferir a una Clave Nueva",
+    "MultipleKeyLinkingHelp": "Si usted recivio una nueva clave de partidiario, use este formulario para trasferir la registracion de la clave vieja a la nueva.",
     "LabelCurrentEmailAddress": "Cuenta de correo actual",
     "LabelCurrentEmailAddressHelp": "La direcci\u00f3n de correo electr\u00f3nico actual a la que se envi\u00f3 la nueva clave.",
     "HeaderForgotKey": "Perd\u00ed mi clave",
@@ -646,13 +646,13 @@
     "LabelSupporterEmailAddress": "La direcci\u00f3n de correo que utliz\u00f3 para comprar la clave.",
     "ButtonRetrieveKey": "Recuperar clave",
     "LabelSupporterKey": "Clave de seguidor (pegar desde el correo)",
-    "LabelSupporterKeyHelp": "Enter your supporter key to start enjoying additional benefits the community has developed for Emby.",
-    "MessageInvalidKey": "Supporter key is missing or invalid.",
-    "ErrorMessageInvalidKey": "In order for any premium content to be registered, you must also be an Emby Supporter. Please donate and support the continued development of the core product. Thank you.",
+    "LabelSupporterKeyHelp": "Agregue su clave de partidiario para empezar a disfrutar beneficios adicionales que la comunidad a creado para Emby.",
+    "MessageInvalidKey": "Clave de partidiario no se encuentra o es invalido.",
+    "ErrorMessageInvalidKey": "Para que cualquier contenido premium sea registrado, usted debe ser un pardidiario de Emby. Porfavor done y ayude a continuar con el desarrollo del producto principal. Gracias.",
     "HeaderDisplaySettings": "Opciones de pantalla",
     "TabPlayTo": "Reproducir en",
     "LabelEnableDlnaServer": "Habilitar servidor Dlna",
-    "LabelEnableDlnaServerHelp": "Allows UPnP devices on your network to browse and play Emby content.",
+    "LabelEnableDlnaServerHelp": "Permite que los aparatos con tecnologia UPnP en su red local pudan acceder los contenidos en Emby.",
     "LabelEnableBlastAliveMessages": "Explotar mensajes en vivo",
     "LabelEnableBlastAliveMessagesHelp": "Active aqu\u00ed si el servidor no es detectado correctamente por otros dispositivos UPnP en su red.",
     "LabelBlastMessageInterval": "Intervalo para mensajes en vivo (segundos)",
@@ -677,9 +677,9 @@
     "NotificationOptionPluginUpdateInstalled": "Se ha instalado la actualizaci\u00f3n del plugin",
     "NotificationOptionPluginInstalled": "Plugin instalado",
     "NotificationOptionPluginUninstalled": "Plugin desinstalado",
-    "NotificationOptionVideoPlayback": "Video playback started",
-    "NotificationOptionAudioPlayback": "Audio playback started",
-    "NotificationOptionGamePlayback": "Game playback started",
+    "NotificationOptionVideoPlayback": "Reproduccion de video a iniciado",
+    "NotificationOptionAudioPlayback": "Reproduccion de audio a iniciado",
+    "NotificationOptionGamePlayback": "Reproduccion de video juego a iniciado",
     "NotificationOptionVideoPlaybackStopped": "Reproducci\u00f3n de video detenida",
     "NotificationOptionAudioPlaybackStopped": "Reproducci\u00f3n de audio detenida",
     "NotificationOptionGamePlaybackStopped": "Reproducci\u00f3n de juego detenida",
@@ -687,7 +687,7 @@
     "NotificationOptionInstallationFailed": "Fallo en la instalaci\u00f3n",
     "NotificationOptionNewLibraryContent": "Nuevo contenido a\u00f1adido",
     "NotificationOptionNewLibraryContentMultiple": "Nuevo contenido a\u00f1adido (multiple)",
-    "NotificationOptionCameraImageUploaded": "Camera image uploaded",
+    "NotificationOptionCameraImageUploaded": "Imagen de camara se a carcado",
     "NotificationOptionUserLockedOut": "User locked out",
     "HeaderSendNotificationHelp": "By default, notifications are delivered to your dashboard inbox. Browse the plugin catalog to install additional notification options.",
     "NotificationOptionServerRestartRequired": "Se requiere el reinicio del servidor",
@@ -729,13 +729,13 @@
     "ButtonFullscreen": "Toggle fullscreen",
     "ButtonScenes": "Escenas",
     "ButtonSubtitles": "Subt\u00edtulos",
-    "ButtonAudioTracks": "Audio tracks",
+    "ButtonAudioTracks": "Pistas de Audio",
     "ButtonPreviousTrack": "Pista anterior",
     "ButtonNextTrack": "Pista siguiente",
     "ButtonStop": "Detener",
     "ButtonPause": "Pausa",
-    "ButtonNext": "Next",
-    "ButtonPrevious": "Previous",
+    "ButtonNext": "Siguiente",
+    "ButtonPrevious": "Anterior",
     "LabelGroupMoviesIntoCollections": "Agrupar pel\u00edculas en colecciones",
     "LabelGroupMoviesIntoCollectionsHelp": "Cuando se muestran las listas de pel\u00edculas, las pel\u00edculas pertenecientes a una colecci\u00f3n se mostrar\u00e1n como un elemento agrupado.",
     "NotificationOptionPluginError": "Error en plugin",
@@ -773,7 +773,7 @@
     "OptionPlainVideoItemsHelp": "Si est\u00e1 habilitado, todos los v\u00eddeos est\u00e1n representados en DIDL como \"object.item.videoItem\" en lugar de un tipo m\u00e1s espec\u00edfico, como por ejemplo \"object.item.videoItem.movie\".",
     "LabelSupportedMediaTypes": "Tipos de medio soportados:",
     "TabIdentification": "Identificaci\u00f3n",
-    "HeaderIdentification": "Identification",
+    "HeaderIdentification": "Identificaci\u00f3n",
     "TabDirectPlay": "Reproducci\u00f3n directa",
     "TabContainers": "Contenedores",
     "TabCodecs": "Codecs",
@@ -795,9 +795,9 @@
     "HeaderProfileServerSettingsHelp": "These values control how Emby Server will present itself to the device.",
     "LabelMaxBitrate": "Bitrate m\u00e1ximo:",
     "LabelMaxBitrateHelp": "Especificar una tasa de bits m\u00e1xima en entornos de ancho de banda limitado, o si el dispositivo impone su propio l\u00edmite.",
-    "LabelMaxStreamingBitrate": "Max streaming bitrate:",
+    "LabelMaxStreamingBitrate": "Bitrate m\u00e1ximo:",
     "LabelMaxStreamingBitrateHelp": "Specify a max bitrate when streaming.",
-    "LabelMaxChromecastBitrate": "Max Chromecast bitrate:",
+    "LabelMaxChromecastBitrate": "Bitrate de reproducci\u00f3n Chromecast",
     "LabelMaxStaticBitrate": "Max sync bitrate:",
     "LabelMaxStaticBitrateHelp": "Specify a max bitrate when syncing content at high quality.",
     "LabelMusicStaticBitrate": "Music sync bitrate:",
@@ -1431,5 +1431,6 @@
     "OptionReportGrouping": "Grouping",
     "HeaderExport": "Export",
     "HeaderColumns": "Columns",
-    "ButtonReset": "Reset"
+    "ButtonReset": "Reset",
+    "OptionEnableExternalVideoPlayers": "Enable external video players"
 }
