--- a/MediaBrowser.Server.Implementations/Localization/Server/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/fr.json
@@ -1431,5 +1431,6 @@
     "OptionReportGrouping": "Groupement",
     "HeaderExport": "Exporter",
     "HeaderColumns": "Colonnes",
-    "ButtonReset": "R\u00e9initialiser"
+    "ButtonReset": "R\u00e9initialiser",
+    "OptionEnableExternalVideoPlayers": "Enable external video players"
 }
