--- a/MediaBrowser.Server.Implementations/Localization/Server/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/nb.json
@@ -69,7 +69,7 @@
     "DividerOr": "-- eller --",
     "HeaderInstalledServices": "Installerte programtillegg",
     "HeaderAvailableServices": "Tilgjengelige tjenester",
-    "MessageNoServicesInstalled": "No services are currently installed.",
+    "MessageNoServicesInstalled": "Ingen programtillegg er installert.",
     "HeaderToAccessPleaseEnterEasyPinCode": "To access, please enter your easy pin code",
     "KidsModeAdultInstruction": "Click the lock icon in the bottom right to configure or leave kids mode. Your pin code will be required.",
     "ButtonConfigurePinCode": "Configure pin code",
@@ -169,7 +169,7 @@
     "MessageNothingHere": "Ingeting her.",
     "MessagePleaseEnsureInternetMetadata": "P\u00e5se at nedlasting av internet-metadata er sl\u00e5tt p\u00e5.",
     "TabSuggested": "Forslag",
-    "TabSuggestions": "Suggestions",
+    "TabSuggestions": "Forslag",
     "TabLatest": "Siste",
     "TabUpcoming": "Kommer",
     "TabShows": "Show",
@@ -233,7 +233,7 @@
     "ScheduledTasksTitle": "Planlagte Oppgaver",
     "TabMyPlugins": "Mine programtillegg",
     "TabCatalog": "Katalog",
-    "TitlePlugins": "Plugins",
+    "TitlePlugins": "Programtillegg",
     "HeaderAutomaticUpdates": "Automatiske oppdateringer",
     "HeaderNowPlaying": "Spiller n\u00e5",
     "HeaderLatestAlbums": "Siste album",
@@ -423,7 +423,7 @@
     "LabelNumberOfGuideDays": "Antall dager av guide data som skal lastes ned",
     "LabelNumberOfGuideDaysHelp": "Nedlasting av guide data for flere dager gir muligheten for \u00e5 planlegge i forveien og for \u00e5 se flere listinger. Dette vil ogs\u00e5 ta lengre tid for nedlasting. Auto vil velge basert p\u00e5 antall kanaler.",
     "OptionAutomatic": "Auto",
-    "HeaderServices": "Services",
+    "HeaderServices": "Tjenester",
     "LiveTvPluginRequired": "En Live TV tilbyder trengs for \u00e5 kunne fortsette.",
     "LiveTvPluginRequiredHelp": "Vennligst installer en av v\u00e5re tilgjengelige programtillegg, f.eks Next Pvr eller ServerWmc.",
     "LabelCustomizeOptionsPerMediaType": "Tilpass for media type:",
@@ -628,7 +628,7 @@
     "ButtonUpdateNow": "Oppdater N\u00e5",
     "TabHosting": "Hosting",
     "PleaseUpdateManually": "Vennligst sl\u00e5 av serveren og oppdater manuelt.",
-    "NewServerVersionAvailable": "A new version of Emby Server is available!",
+    "NewServerVersionAvailable": "En ny versjon av Emby Server er tilgjengelig!",
     "ServerUpToDate": "Emby Server is up to date",
     "LabelComponentsUpdated": "F\u00f8lgende komponenter har blitt installert eller oppdatert:",
     "MessagePleaseRestartServerToFinishUpdating": "Vennligst restart serveren for \u00e5 fullf\u00f8re installasjon av oppdateringer.",
@@ -926,13 +926,13 @@
     "LabelChannelDownloadAgeHelp": "Nedlastet innhold eldre enn dette vil bli slettet. Det vil v\u00e6re avspillbart via internett streaming.",
     "ChannelSettingsFormHelp": "Installer kanaler som eksempel Trailers og Vimeo i programtillegg katalogen.",
     "ButtonOptions": "Alternativer",
-    "ViewTypePlaylists": "Playlists",
+    "ViewTypePlaylists": "Spillelister",
     "ViewTypeMovies": "Filmer",
     "ViewTypeTvShows": "TV",
     "ViewTypeGames": "Spill",
     "ViewTypeMusic": "Musikk",
-    "ViewTypeMusicGenres": "Genres",
-    "ViewTypeMusicArtists": "Artists",
+    "ViewTypeMusicGenres": "Sjangere",
+    "ViewTypeMusicArtists": "Artist",
     "ViewTypeBoxSets": "Samlinger",
     "ViewTypeChannels": "Kanaler",
     "ViewTypeLiveTV": "Live TV",
@@ -956,7 +956,7 @@
     "ViewTypeMovieFavorites": "Favoritter",
     "ViewTypeMovieGenres": "Sjangere",
     "ViewTypeMusicLatest": "Siste",
-    "ViewTypeMusicPlaylists": "Playlists",
+    "ViewTypeMusicPlaylists": "Spillelister",
     "ViewTypeMusicAlbums": "Albumer",
     "ViewTypeMusicAlbumArtists": "Album artister",
     "HeaderOtherDisplaySettings": "Visnings Innstillinger",
@@ -1073,7 +1073,7 @@
     "OptionBox": "Boks",
     "OptionBoxRear": "Boks bak",
     "OptionDisc": "Disk",
-    "OptionIcon": "Icon",
+    "OptionIcon": "Ikon",
     "OptionLogo": "Logo",
     "OptionMenu": "Meny",
     "OptionScreenshot": "Screenshot",
@@ -1125,7 +1125,7 @@
     "UserDeletedWithName": "Bruker {0} har blitt slettet",
     "MessageServerConfigurationUpdated": "Server konfigurasjon har blitt oppdatert",
     "MessageNamedServerConfigurationUpdatedWithValue": "Server konfigurasjon seksjon {0} har blitt oppdatert",
-    "MessageApplicationUpdated": "Emby Server has been updated",
+    "MessageApplicationUpdated": "Emby server har blitt oppdatert",
     "AuthenticationSucceededWithUserName": "{0} autentisert med suksess",
     "FailedLoginAttemptWithUserName": "P\u00e5loggingsfors\u00f8k feilet fra {0}",
     "UserDownloadingItemWithValues": "{0} laster ned {1}",
@@ -1256,9 +1256,9 @@
     "LabelExtractChaptersDuringLibraryScan": "Hent ut kapittel bilder under bibliotek skann",
     "LabelExtractChaptersDuringLibraryScanHelp": "Hvis aktivert, vil kapittel bilder bli hentet ut mens videoer importeres under bibliotek skanning.\nHvis deaktivert, vil de bli hentet ut under planlagte oppgaver for kapittel bilder, som medf\u00f8rer at vanlig bibliotek skanning blir fortere ferdig.",
     "LabelConnectGuestUserName": "Their Emby username or email address:",
-    "LabelConnectUserName": "Emby username\/email:",
+    "LabelConnectUserName": "Emby brukernavn\/epost",
     "LabelConnectUserNameHelp": "Connect this user to an Emby account to enable easy sign-in access from any Emby app without having to know the server ip address.",
-    "ButtonLearnMoreAboutEmbyConnect": "Learn more about Emby Connect",
+    "ButtonLearnMoreAboutEmbyConnect": "L\u00e6r mer om Emby Connect",
     "LabelExternalPlayers": "Eksterne avspillere:",
     "LabelExternalPlayersHelp": "Vis knapper for \u00e5 spille av innhold i eksterne avspillere. Dette er bare tilgjengelig p\u00e5 enheter som st\u00f8tter url oppsett, i hovedsak Android og iOS. Med eksterne spillere er det vanligvis ingen st\u00f8tte for fjernkontroll eller gjenopptaking.",
     "HeaderSubtitleProfile": "Undertekst Profil",
@@ -1318,7 +1318,7 @@
     "LabelConnectGuestUserNameHelp": "This is the username that your friend uses to sign in to the Emby website, or their email address.",
     "HeaderInviteUserHelp": "Sharing your media with friends is easier than ever before with Emby Connect.",
     "ButtonSendInvitation": "Send Invitasjon",
-    "HeaderSignInWithConnect": "Sign in with Emby Connect",
+    "HeaderSignInWithConnect": "Logg inn med Emby Connect",
     "HeaderGuests": "Gjester",
     "HeaderLocalUsers": "Lokale Brukere",
     "HeaderPendingInvitations": "Ventende invitasjoner",
@@ -1337,7 +1337,7 @@
     "HeaderOptionalLinkEmbyAccount": "Optional: Link your Emby account",
     "ButtonTrailerReel": "Trailer reel",
     "HeaderTrailerReel": "Trailer Reel",
-    "OptionPlayUnwatchedTrailersOnly": "Play only unwatched trailers",
+    "OptionPlayUnwatchedTrailersOnly": "Bare spill usette trailere",
     "HeaderTrailerReelHelp": "Start a trailer reel to play a long running playlist of trailers.",
     "MessageNoTrailersFound": "No trailers found. Install the Trailer channel to enhance your movie experience by adding a library of internet trailers.",
     "HeaderNewUsers": "Nye Brukere",
@@ -1385,10 +1385,10 @@
     "HeaderThisUserIsCurrentlyDisabled": "This user is currently disabled",
     "MessageReenableUser": "See below to reenable",
     "LabelEnableInternetMetadataForTvPrograms": "Download internet metadata for:",
-    "OptionTVMovies": "TV Movies",
-    "HeaderUpcomingMovies": "Upcoming Movies",
-    "HeaderUpcomingSports": "Upcoming Sports",
-    "HeaderUpcomingPrograms": "Upcoming Programs",
+    "OptionTVMovies": "TV serier",
+    "HeaderUpcomingMovies": "Kommende filmer",
+    "HeaderUpcomingSports": "Kommende sport",
+    "HeaderUpcomingPrograms": "Kommende programmer",
     "ButtonMoreItems": "Mer...",
     "LabelShowLibraryTileNames": "Show library tile names",
     "LabelShowLibraryTileNamesHelp": "Determines if labels will be displayed underneath library tiles on the home page",
@@ -1407,29 +1407,30 @@
     "LabelConversionCpuCoreLimitHelp": "Limit the number of CPU cores that will be used during sync conversion.",
     "OptionEnableFullSpeedConversion": "Enable full speed conversion",
     "OptionEnableFullSpeedConversionHelp": "By default, sync conversion is performed at a low speed to minimize resource consumption.",
-    "HeaderPlaylists": "Playlists",
-    "HeaderSelectDate": "Select Date",
-    "HeaderViewStyles": "View Styles",
+    "HeaderPlaylists": "Spillelister",
+    "HeaderSelectDate": "Velg dato",
+    "HeaderViewStyles": "Se stiler",
     "LabelSelectViewStyles": "Enable enhanced presentations for:",
     "LabelSelectViewStylesHelp": "If enabled, views will be built with metadata to offer categories such as Suggestions, Latest, Genres, and more. If disabled, they'll be displayed with simple folders.",
-    "TabPhotos": "Photos",
-    "TabVideos": "Videos",
-    "HeaderWelcomeToEmby": "Welcome to Emby",
+    "TabPhotos": "Bilder",
+    "TabVideos": "Filmer",
+    "HeaderWelcomeToEmby": "Velkommen til Emby",
     "EmbyIntroMessage": "With Emby you can easily stream videos, music and photos to smart phones, tablets and other devices from your Emby Server.",
-    "ButtonSkip": "Skip",
-    "TextConnectToServerManually": "Connect to server manually",
-    "ButtonSignInWithConnect": "Sign in with Emby Connect",
-    "ButtonConnect": "Connect",
-    "LabelServerHost": "Host:",
-    "LabelServerHostHelp": "192.168.1.100 or https:\/\/myserver.com",
+    "ButtonSkip": "Hopp over",
+    "TextConnectToServerManually": "Koble til server manuelt",
+    "ButtonSignInWithConnect": "Logg inn med Emby Connect",
+    "ButtonConnect": "Koble til",
+    "LabelServerHost": "Vert",
+    "LabelServerHostHelp": "192.168.1.100 eller \"https:\/\/dinserver.no\"",
     "LabelServerPort": "Port:",
-    "HeaderNewServer": "New Server",
-    "ButtonChangeServer": "Change Server",
-    "HeaderConnectToServer": "Connect to Server",
+    "HeaderNewServer": "Ny server",
+    "ButtonChangeServer": "Endre server",
+    "HeaderConnectToServer": "Koble til server",
     "OptionReportList": "List View",
     "OptionReportStatistics": "Statistics",
     "OptionReportGrouping": "Grouping",
-    "HeaderExport": "Export",
+    "HeaderExport": "Eksporter",
     "HeaderColumns": "Columns",
-    "ButtonReset": "Reset"
+    "ButtonReset": "Resett",
+    "OptionEnableExternalVideoPlayers": "Enable external video players"
 }
