--- a/MediaBrowser.Server.Implementations/Localization/Server/kk.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/kk.json
@@ -1431,5 +1431,6 @@
     "OptionReportGrouping": "\u0422\u043e\u043f\u0442\u0430\u0443",
     "HeaderExport": "\u042d\u043a\u0441\u043f\u043e\u0440\u0442\u0442\u0430\u0443",
     "HeaderColumns": "\u0411\u0430\u0493\u0430\u043d\u0434\u0430\u0440",
-    "ButtonReset": "\u042b\u0441\u044b\u0440\u0443"
+    "ButtonReset": "\u042b\u0441\u044b\u0440\u0443",
+    "OptionEnableExternalVideoPlayers": "\u0421\u044b\u0440\u0442\u049b\u044b \u043e\u0439\u043d\u0430\u0442\u049b\u044b\u0448\u0442\u0430\u0440\u0434\u044b \u049b\u043e\u0441\u0443"
 }
