--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -776,5 +776,15 @@
     "ButtonRemote": "Remote",
     "TabInfo": "Info",
     "TabCast": "Cast",
-    "TabScenes": "Scenes"
+    "TabScenes": "Scenes",
+    "HeaderUnlockApp": "Unlock App",
+    "MessageUnlockAppWithPurchase": "Unlock the full features of the app with a small one-time purchase.",
+    "MessageUnlockAppWithPurchaseOrSupporter": "Unlock the full features of the app with a small one-time purchase, or by signing in with an active Emby Supporter Membership.",
+    "MessageUnlockAppWithSupporter": "Unlock the full features of the app by signing in with an active Emby Supporter Membership.",
+    "MessageToValidateSupporter": "To validate your Emby Supporter Membership, simply sign into the app using your Wifi connection within your home network.",
+    "MessagePaymentServicesUnavailable": "Payment services are currently unavailable. Please try again later.",
+    "ButtonUnlockWithSupporter": "Unlock with Emby Supporter Membership",
+    "MessagePleaseSignInLocalNetwork": "Before proceeding, please ensure that you're connected to your local network using a Wifi or LAN connection.",
+    "ButtonUnlockWithPurchase": "Unlock with Purchase",
+    "MessageLiveTvGuideRequiresUnlock": "The Live TV Guide is currently limited to {0} channels. Click the unlock button to learn how to enjoy the full experience."
 }
