update cordova scripts

--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/javascript.json
@@ -781,7 +781,7 @@
     "MessageUnlockAppWithPurchase": "Unlock the full features of the app with a small one-time purchase.",
     "MessageUnlockAppWithPurchaseOrSupporter": "Unlock the full features of the app with a small one-time purchase, or by signing in with an active Emby Supporter Membership.",
     "MessageUnlockAppWithSupporter": "Unlock the full features of the app by signing in with an active Emby Supporter Membership.",
-    "MessageToValidateSupporter": "To validate your Emby Supporter Membership, simply sign into the app using your Wifi connection within your home network.",
+    "MessageToValidateSupporter": "If you have an active Emby Supporter Membership, simply sign into the app using your Wifi connection within your home network.",
     "MessagePaymentServicesUnavailable": "Payment services are currently unavailable. Please try again later.",
     "ButtonUnlockWithSupporter": "Sign in with Emby Supporter Membership",
     "MessagePleaseSignInLocalNetwork": "Before proceeding, please ensure that you're connected to your local network using a Wifi or LAN connection.",
